# chatshell

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: main.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  commands.rs  lib.rs  main.rs
src-tauri/src/plugins/: mod.rs
src/components/: ChatPanel.vue
src/composables/: useAiClient.ts
src/types/: ai.ts
