[package]
name = "chatshell"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chatshell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.28", features = ["full"] }
portable-pty = "0.9.0"
tokio-util = { version = "0.7", features= ["io-util", "codec"] }
once_cell = "1.19"
uuid = { version = "1.0", features = ["v4"] }  # 新增：用于生成会话ID
libc = "0.2"
tauri-plugin-locale = "2.0.1"
tauri-plugin-dialog = "2"
# MCP和AI相关依赖
rmcp = { version = "0.1", features = ["server", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
regex = "1.0"
anyhow = "1.0"
# JSON Schema 支持
schemars = { version = "0.8", features = ["derive"] }

# 文件系统操作
glob = "0.3"
walkdir = "2.0"
# 异步运行时
futures = "0.3"
# 日志
log = "0.4"
env_logger = "0.10"
# 时间处理
chrono = { version = "0.4", features = ["serde"] }
# 系统信息
sysinfo = "0.29"
# 路径处理
path-absolutize = "3.0"
# 终端相关
crossterm = "0.27"
