[package]
name = "chatshell"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chatshell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.28", features = ["full"] }
portable-pty = "0.9.0"
tokio-util = { version = "0.7", features= ["io-util", "codec"] }
once_cell = "1.19"
uuid = { version = "1.0", features = ["v4"] }  # 新增：用于生成会话ID
libc = "0.2"
tauri-plugin-locale = "2.0.1"
tauri-plugin-dialog = "2"
# MCP和AI相关依赖
rust-mcp-sdk = "0.5.0"
reqwest = { version = "0.12.22", features = ["json", "stream"] }
regex = "1.0"
anyhow = "1.0"
futures-util = "0.3"
thiserror = "1.0"
async-trait = "0.1"
bytes = { version = "1", features = ["serde"] }
